Fixed z-index on the dropdown toggler (#976)

--- a/src/main/resources/assets/styles/view/content-item-preview-toolbar.less
+++ b/src/main/resources/assets/styles/view/content-item-preview-toolbar.less
@@ -47,7 +47,7 @@
     .action-button {
       display: block;
       text-align: left;
-      z-index: 1;
+      z-index: 2;
       margin-left: 0;
       margin-right: 40px;
       border-left: 1px solid @admin-bg-light-gray;
@@ -66,7 +66,7 @@
     .@{_COMMON_PREFIX}dropdown-handle {
       right: 2px;
       left: auto;
-      z-index: 1;
+      z-index: 2;
 
       &[disabled] {
         display: none;
